--- a/style/game.css
+++ b/style/game.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #008080;
+}
+
 .window {
     position: absolute;
 }
@@ -11,13 +15,18 @@
 
 .windowContent {
     position: relative;
+    background-color: white;
     border: black;
+}
+
+.windowContent p {
+    margin: 0;
 }
 
 #theBigButton {
     position: relative;
-    top: 100px;
-    left: 100px;
+    top: 33.33%;
+    left: 33.33%;
     background: none;
     border: none;
     padding: 0;
@@ -33,4 +42,12 @@
 #theBigButton:hover img {
     width: 95%;
     height: 95%;
+}
+
+.floatLeft {
+    float: left;
+}
+
+.floatRight {
+    float: right;
 }
